fix colour for contrast

--- a/src/Components/Pokemon/styling/About.css
+++ b/src/Components/Pokemon/styling/About.css
@@ -14,7 +14,7 @@
 }
 
 .about__headers {
-  color: #cfd0d3;
+  color: #9c9090;
   font-weight: 700;
 }
 
