--- a/src/Components/Pokemon/styling/Moves.css
+++ b/src/Components/Pokemon/styling/Moves.css
@@ -12,6 +12,6 @@
 
   .moves__section h5 {
     text-transform: capitalize;
-    color: #cfd0d3;
+    color: #9c9090;
     font-weight: 700;
   }
