--- a/src/Components/Pokemon/styling/Stats.css
+++ b/src/Components/Pokemon/styling/Stats.css
@@ -13,7 +13,7 @@
 }
 
 .base-stats__headers {
-    color: #cfd0d3;
+    color: #9c9090;
     font-weight: 700;
     flex: 1;
     max-width: 180px;
